-O2 and -ffreestanding were causing problems

--- a/src/bootloader/Makefile
+++ b/src/bootloader/Makefile
@@ -18,7 +18,7 @@ LDFLAGS         = -nostdlib -znocombreloc -T $(EFI_LDS) -shared \
 				  -Bsymbolic -L $(EFILIB) $(EFI_CRT_OBJS) 
 
 CFLAGS          		 = -I../kernel/include -Iefinclude -fno-stack-protector -fpic \
-		  		  		   -fshort-wchar -mno-red-zone -Wall -ffreestanding -O2
+		  		  		   -fshort-wchar -mno-red-zone -Wall
 
 all: ../boot.efi
 	@echo done compiling bootloader.
