Compiling to c++ now

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,18 +1,20 @@
-KERNEL_SRCFILES         := $(shell find . -name "*.c")
-KERNEL_OBJS              = $(KERNEL_SRCFILES:.c=.o)
+KERNEL_SRCFILES         := $(shell find . -name "*.cpp")
+KERNEL_OBJS              = $(KERNEL_SRCFILES:.cpp=.o)
 
-KERNEL_LDFLAGS  = -ffreestanding -O2 -nostdlib -z max-page-size=0x1000
+KERNEL_LDFLAGS  = -nostdlib -z max-page-size=0x1000
 
 KERNEL_LIBS    := -lgcc
 
 CFLAGS          		 = -Iinclude -fno-stack-protector -fpic \
 		  		  		   -fshort-wchar -mno-red-zone -Wall
 
+CC              = g++
+
 all: ../kernel.elf
 	@echo done compiling kernel.
 
-%.o: %.c $(shell find . -name "*.h")
-	gcc ${CFLAGS} -c $< -o $@;
+%.o: %.cpp $(shell find . -name "*.h")
+	${CC} ${CFLAGS} -c $< -o $@;
 
 ../kernel.elf: ${KERNEL_OBJS}
-	gcc -T kernel.ld -g3 -o $@ ${KERNEL_LDFLAGS} ${KERNEL_OBJS} ${KERNEL_LIBS}
+	${CC} -T kernel.ld -g3 -o $@ ${KERNEL_LDFLAGS} ${KERNEL_OBJS} ${KERNEL_LIBS}
