Finaly got assembly files to link properly

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -1,4 +1,7 @@
 KERNEL_SRCFILES         := $(shell find . -name "*.cpp")
+KERNEL_ASMSRC           := $(shell find . -name "*.asm")
+KERNEL_ASMBIN           := $(KERNEL_ASMSRC:.asm=_asm.o)
+
 KERNEL_OBJS             := $(KERNEL_SRCFILES:.cpp=.o)
 
 KERNEL_LDFLAGS  		 = -nostdlib -z max-page-size=0x1000
@@ -6,15 +9,18 @@ KERNEL_LDFLAGS  		 = -nostdlib -z max-page-size=0x1000
 KERNEL_LIBS    			:= -lgcc
 
 CFLAGS          		 = -Iinclude -fno-stack-protector -fpic \
-		  		  		   -fshort-wchar -mno-red-zone -Wall
+		  		  		   -fshort-wchar -mno-red-zone -Wall -fno-exceptions
 
 CC              		 = g++
 
 all: ../kernel.elf
 	@echo done compiling kernel.
 
-%.o: %.cpp $(shell find . -name "*.h")
+%.o: %.cpp $(shell find . -name "*.h**")
 	${CC} ${CFLAGS} -c $< -o $@;
 
-../kernel.elf: ${KERNEL_OBJS}
+%_asm.o: %.asm
+	nasm $^ -f elf64 -o $@
+
+../kernel.elf: ${KERNEL_OBJS} ${KERNEL_ASMBIN}
 	${CC} -T kernel.ld -g3 -o $@ ${KERNEL_LDFLAGS} $^ ${KERNEL_LIBS}
