--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "OVMFbin"]
 	path = OVMFbin
-	url = https://github.com/platinumTypeC/OVMFbin.git
+	url = https://www.github.com/platinumTypeC/OVMFbin.git
