-mgeneral-regs-only is required to do interrupts

--- a/src/kernel/Makefile
+++ b/src/kernel/Makefile
@@ -9,7 +9,8 @@ KERNEL_LDFLAGS  		 = -nostdlib -z max-page-size=0x1000
 KERNEL_LIBS    			:= -lgcc
 
 CFLAGS          		 =  -Iinclude -fno-stack-protector -fpic \
-		  		  		   	-fshort-wchar -mno-red-zone -Wall -fno-exceptions
+		  		  		   	-fshort-wchar -mno-red-zone -Wall -fno-exceptions \
+							-mgeneral-regs-only
 
 CC              		 = g++
 
