Added Loading Bar

--- a/src/bootloader/Makefile
+++ b/src/bootloader/Makefile
@@ -1,3 +1,18 @@
+ifneq ($(words $(MAKECMDGOALS)),1)
+.DEFAULT_GOAL = all
+%:
+	@$(MAKE) $@ --no-print-directory -rRf $(firstword $(MAKEFILE_LIST))
+else
+ifndef ECHO
+T 						:= $(shell $(MAKE) $(MAKECMDGOALS) --no-print-directory \
+							-nrRf $(firstword $(MAKEFILE_LIST)) \
+							ECHO="COUNTTHIS" | grep -c "COUNTTHIS")
+
+N 						:= x
+C 						 = $(words $N)$(eval N := x $N)
+ECHO					 = echo "`expr " [\`expr $C '*' 100 / $T\`" : '.*\(....\)$$'`%]"
+endif
+
 CC                       = gcc
 
 ARCH                    := $(shell uname -m | sed s,i[3456789]86,ia32,)
@@ -21,15 +36,19 @@ CFLAGS          		 = -I../kernel/include -Iefinclude -I. -fno-stack-protector -f
 		  		  		   -fshort-wchar -mno-red-zone -Wall
 
 all: ../boot.efi
-	@echo done compiling bootloader.
+	@${ECHO} done compiling bootloader.
 
 %.o: %.c $(shell find . -name "*.h") ../kernel/include/mapple/config.h ../kernel/include/mapple/types.h
-	gcc ${CFLAGS} -c $< -o $@
+	@${ECHO} Compiling $@
+	@gcc ${CFLAGS} -c $< -o $@
 
 ../boot.so: ${BOOTLOADER_OBJS}
-	ld $(LDFLAGS) $(BOOTLOADER_OBJS) -o $@ -lefi -lgnuefi
+	@${ECHO} Linking $@	
+	@ld $(LDFLAGS) $(BOOTLOADER_OBJS) -o $@ -lefi -lgnuefi
 
 ../boot.efi: ../boot.so
-	objcopy -j .text -j .sdata -j .data -j .dynamic \
+	@${ECHO} Object Copy $@
+	@objcopy -j .text -j .sdata -j .data -j .dynamic \
 		-j .dynsym  -j .rel -j .rela -j .reloc \
 		--target=efi-app-$(ARCH) $^ $@
+endif
